push new version

--- a/week6/tutorial1.ipynb
+++ b/week6/tutorial1.ipynb
@@ -324,9 +324,9 @@
    "source": [
     "print(f\"user.name: {user.name}\")\n",
     "print(f\"user.screen_name: {user.screen_name}\")\n",
-    "print(f\"user.location: {user.location}\")\n",
-    "print(f\"user.description: {user.description}\")\n",
-    "print(f\"user.followers_count: {user.followers_count}\")\n",
+    "print(f\"user.location: {user.XXX}\")\n",
+    "print(f\"user.description: {user.XXXX}\")\n",
+    "print(f\"user.followers_count: {user.XXXX}\")\n",
     "print(f\"user.listed_count: {user.listed_count}\")\n",
     "print(f\"user.statuses_count: {user.statuses_count}\")\n",
     "print(f\"user urls: {user.entities['url']['urls'][0]['expanded_url']}\")"
@@ -348,7 +348,7 @@
    "outputs": [],
    "source": [
     "user_id = user.id_str\n",
-    "Latest_tweets = api.user_timeline(user_id=user_id, count=5)"
+    "Latest_tweets = api.user_timeline(user_id=user_id, count=XX)"
    ]
   },
   {
@@ -387,11 +387,11 @@
    "outputs": [],
    "source": [
     "print(f\"username: {Latest_tweets[0].user.screen_name}\")\n",
-    "print(f\"description: {Latest_tweets[0].user.description}\")\n",
-    "print(f\"text: {Latest_tweets[0].text}\")\n",
+    "print(f\"description: {Latest_tweets[0].user.XXX}\")\n",
+    "print(f\"text: {Latest_tweets[0].XXX}\")\n",
     "print(f\"date_time: {Latest_tweets[0].created_at}\")\n",
-    "print(f\"location: {Latest_tweets[0].user.location}\")\n",
-    "print(f\"coordinates: {Latest_tweets[0].coordinates}\")\n",
+    "print(f\"location: {Latest_tweets[0].user.XXX}\")\n",
+    "print(f\"coordinates: {Latest_tweets[0].XXX}\")\n",
     "print(f\"following: {Latest_tweets[0].user.friends_count}\")\n",
     "print(f\"followers: {Latest_tweets[0].user.followers_count}\")\n",
     "print(f\"totaltweets: {Latest_tweets[0].user.statuses_count}\")\n",
@@ -456,7 +456,7 @@
     "user = api.get_user(screen_name='BarackObama')\n",
     "user_id = user.id_str\n",
     "\n",
-    "Latest_tweets = api.user_timeline(user_id=user_id, count=200)"
+    "Latest_tweets = api.user_timeline(user_id=user_id, count=XXX)"
    ]
   },
   {
@@ -474,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(Latest_tweets[0].text)"
+    "type(Latest_tweets[0].XXX)"
    ]
   },
   {
@@ -589,15 +589,16 @@
     "\n",
     "plt.figure(figsize=(20, 5)) \n",
     "plt.bar(x, h)\n",
-    "plt.xticks(fontsize = 10, rotation = 70)\n",
-    "plt.yticks(fontsize = 12)\n",
+    "plt.xticks(fontsize = XX, rotation = XX)\n",
+    "plt.yticks(fontsize = XX)\n",
     "plt.title(f'The most used words by {user.screen_name} in the last 200 tweets\\n', fontsize = 20) \n",
-    "plt.ylabel(f'Count', fontsize=16)\n",
-    "plt.xlabel('Words', fontsize=18)\n",
+    "plt.ylabel(f'XXX', fontsize=XX)\n",
+    "plt.xlabel(f'XXX', fontsize=XX)\n",
     "plt.tight_layout()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -607,7 +608,9 @@
     "\n",
     "There are NLP packages that allow not only clustering analysis but also semantic analysis. So we can also evaluate whether the tweets have a positive or negative connotation. If you are interested you can have a look at [`NLTK`](https://www.nltk.org/api/nltk.tag.api.html).\n",
     "\n",
-    "Here we will apply our own word filter that includes prepositions and other words that will help to have a nicer plot."
+    "Here we will apply our own word filter that includes prepositions and other words that will help to have a nicer plot.\n",
+    "\n",
+    "Add a couple of words to the filter."
    ]
   },
   {
@@ -619,11 +622,11 @@
     "word_filter = ['aboard', 'about', 'above', 'across', 'after', 'against', 'along', 'amid', 'among', 'around', 'as', 'at', 'before', 'behind', 'below', 'beneath', \n",
     "        'beside', 'between', 'beyond', 'but', 'by', 'concerning', 'considering', 'despite', 'down', 'during', 'except', 'following', 'for', 'from', 'in', \n",
     "        'inside', 'into', 'like', 'minus', 'near', 'next', 'of', 'off', 'on', 'onto', 'opposite', 'out', 'outside', 'over', 'past', 'per', 'plus', \n",
-    "        'regarding', 'round', 'save', 'since', 'than', 'through', 'till', 'to', 'toward', 'under', 'underneath', 'unlike', 'until', 'up', 'upon', 'versus', \n",
-    "        'via', 'with', 'within', 'without', 'and', 'the', 'a', 'this', 'rt', 'can', 'have', 'if', 'you', 'i', 'some', 'was', 'we', 'our', 'be', 'who',\n",
+    "        'regarding', 'round', 'save', 'since', 'than', 'through', 'till', 'toward', 'under', 'underneath', 'unlike', 'until', 'up', 'upon', 'versus', \n",
+    "        'via', 'with', 'within', 'without', 'this', 'rt', 'can', 'have', 'if', 'you', 'i', 'some', 'was', 'we', 'our', 'be', 'who',\n",
     "        'this', 'rt', 'can', 'have', 'if', 'you', 'i', 'some', 'was', 'we', 'our', 'be', 'who', 'is', 'my', '–', 'are', 'know','that', 'will', 'get',\n",
-    "        'make', 'your', 'more', 'so', 'don’t', 'it’s', 'i’m', 'an', 'their', 'it', 'us', 'his', 'not', 'one', 'what', 'when', 'first', 'sure', 'do', 'new', 'last',\n",
-    "        'all', 'many', 'just', 'been', 'want', 'only', 'years', 'year', 'today', 'day']\n",
+    "        'make', 'your', 'more', 'so', 'don’t', 'it’s', 'i’m', 'their', 'it', 'us', 'his', 'not', 'one', 'what', 'when', 'first', 'sure', 'do', 'new', 'last',\n",
+    "        'all', 'many', 'just', 'been', 'want', 'only', 'years', 'year', 'today', 'day', ...]\n",
     "\n",
     "count_filter = 5\n",
     "x = []\n",
@@ -644,11 +647,11 @@
     "\n",
     "plt.figure(figsize=(15, 5)) \n",
     "plt.bar(x, h)\n",
-    "plt.xticks(fontsize = 10, rotation = 70)\n",
-    "plt.yticks(fontsize = 12)\n",
+    "plt.xticks(fontsize = XX, rotation = XX)\n",
+    "plt.yticks(fontsize = XX)\n",
     "plt.title(f'The most used words by {user.screen_name} in the last 200 tweets\\nUsing a word filter', fontsize = 20) \n",
-    "plt.ylabel(f'Count', fontsize=16)\n",
-    "plt.xlabel('Words', fontsize=16)\n",
+    "plt.ylabel(f'XXXX', fontsize=16)\n",
+    "plt.xlabel(f'XXXX', fontsize=16)\n",
     "plt.tight_layout()"
    ]
   },
@@ -895,7 +898,7 @@
     "    if db.Coordinates[i] != None:\n",
     "        count += 1\n",
     "\n",
-    "print(f'{count} tweets contain the coordinates out of the 100 retrieved tweets')"
+    "print(f'{XXX} tweets contain the coordinates out of the 100 retrieved tweets')"
    ]
   },
   {
@@ -1186,16 +1189,16 @@
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(20, 10))\n",
     "\n",
-    "world.boundary.plot(ax=ax, color='k', alpha=.3)\n",
-    "dbg.plot(ax=ax, marker='o', color='red')\n",
+    "world.boundary.plot(ax=ax, color='XX', alpha=.3)\n",
+    "dbg.plot(ax=ax, marker='o', color='XX')\n",
     "\n",
     "\n",
-    "ax.set_title('Some earthquakes reported on Twitter', fontsize=22)\n",
-    "ax.set_ylabel('Latitud', fontsize = 16, rotation = 90)\n",
-    "ax.set_xlabel('Longitud', fontsize = 16)\n",
-    "plt.xticks(fontsize = 14)\n",
-    "plt.yticks(fontsize = 14)\n",
-    "legend_elements = [Line2D([0], [0], marker='o', color='w', label=f'Earthquake', markerfacecolor='r', markersize=10)]\n",
+    "ax.set_title('XXXX', fontsize=XX)\n",
+    "ax.set_ylabel('XXX', fontsize = XX, rotation = XX)\n",
+    "ax.set_xlabel('XXX', fontsize = XX)\n",
+    "plt.xticks(fontsize = XXX)\n",
+    "plt.yticks(fontsize = XX)\n",
+    "legend_elements = [Line2D([0], [0], marker='o', color='w', label=f'XXX', markerfacecolor='XX', markersize=10)]\n",
     "plt.legend(handles=legend_elements, fontsize=16, bbox_to_anchor=(0.85,1), loc=\"upper left\")"
    ]
   },
@@ -1227,15 +1230,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dbg.loc[dbg['magnitude'].max()]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1256,7 +1250,7 @@
     "#Plot color of the circle\n",
     "fig, ax = plt.subplots(1, 1, figsize=(20, 10))\n",
     "\n",
-    "world.boundary.plot(ax=ax, color='k', alpha=.3)\n",
+    "world.boundary.plot(ax=ax, color='XX', alpha=.3)\n",
     "\n",
     "divider = make_axes_locatable(ax)\n",
     "cax = divider.append_axes(\"right\", size=\"2%\", pad=0.1)\n",
@@ -1264,11 +1258,11 @@
     "         vmin=0, vmax=8, zorder=2, legend=True, \n",
     "         legend_kwds={'label': f\"Magnitude\", 'orientation': \"vertical\"}, cax=cax) \n",
     "\n",
-    "ax.set_title('', fontsize=22) # set title\n",
-    "ax.set_ylabel('Latitud', fontsize = 16, rotation = 90)\n",
-    "ax.set_xlabel('Longitud', fontsize = 16)\n",
-    "plt.xticks(fontsize = 14)\n",
-    "plt.yticks(fontsize = 14)\n",
+    "ax.set_title('XXX', fontsize=XX) # set title\n",
+    "ax.set_ylabel('XXX', fontsize = XX, rotation = XX)\n",
+    "ax.set_xlabel('XXX', fontsize = XX)\n",
+    "plt.xticks(fontsize = XX)\n",
+    "plt.yticks(fontsize = XX)\n",
     "legend_elements = [Line2D([0], [0], marker='o', color='w', label=f'Earthquake', markerfacecolor='w', markeredgecolor='k', markersize=10)]\n",
     "plt.legend(handles=legend_elements, fontsize=16, bbox_to_anchor=(-8,1), loc=\"upper left\")"
    ]
@@ -1400,11 +1394,11 @@
     "    dates = [datetime.fromisoformat(date) for date in dates]\n",
     "    plt.figure(figsize=(10, 5)) \n",
     "    plt.hist(dates, range=(START_DATE, END_DATE), bins=(END_DATE - START_DATE).days)\n",
-    "    plt.xticks(fontsize = 10)\n",
-    "    plt.yticks(fontsize = 10)\n",
-    "    plt.title(f'{title}', fontsize = 16) \n",
-    "    plt.ylabel(f'Count', fontsize=12)\n",
-    "    plt.xlabel(f'Date', fontsize=12)\n",
+    "    plt.xticks(fontsize = XX)\n",
+    "    plt.yticks(fontsize = XX)\n",
+    "    plt.title(f'{title}', fontsize = XX) \n",
+    "    plt.ylabel(f'Count', fontsize=XX)\n",
+    "    plt.xlabel(f'Date', fontsize=XX)\n",
     "    legend_elements = [Line2D([0], [0], color='b', label=f'Tweets')]\n",
     "    plt.legend(handles=legend_elements, fontsize=10)\n",
     "    plt.show()"
@@ -1471,7 +1465,7 @@
     "\n",
     "print(len(tweets))\n",
     "print(len(filtered_tweets))\n",
-    "plot_tweets(filtered_tweets, 'Flood histogram \\nNegative keywords')"
+    "plot_tweets(filtered_tweets, 'XXX')"
    ]
   },
   {
@@ -1495,7 +1489,7 @@
     "\n",
     "print(len(tweets))\n",
     "print(len(filtered_tweets))\n",
-    "plot_tweets(filtered_tweets, 'Flood histogram \\nPositive keywords')"
+    "plot_tweets(filtered_tweets, 'XXX')"
    ]
   },
   {
@@ -1506,11 +1500,6 @@
     "<b>Question 12:</b> Can you think about other negative keywords? Can you think of other positive keywords?\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
