--- a/_sources/week6/tutorial1.ipynb
+++ b/_sources/week6/tutorial1.ipynb
@@ -170,7 +170,9 @@
     "\n",
     "The [Twitter API](https://developer.twitter.com/en) enables programmatic access to Twitter in unique and advanced ways. Twitter's Developer Platform enables you to harness the power of Twitter's open, global, real-time, and historical platform within your own applications. The platform provides tools, resources, data, and API products for you to integrate, and expand Twitter's impact through research, solutions, and more.\n",
     "\n",
-    "Unfortunately, Twitter has made their API policy very strict since February 12. As such, we cannot use their API within this tutorial. As such, we will use data that was previously retrieved by us (in the preparation of this tutorial). \n"
+    "Unfortunately, Twitter has made their API policy very strict since February 12. As such, we cannot use their API within this tutorial. As such, we will use data that was previously retrieved by us (in the preparation of this tutorial). \n",
+    "\n",
+    "Download the 'Week6_Data' folder provided in Canvas and save it to your previously created BigData folder on your Google Drive.\n"
    ]
   },
   {
@@ -183,7 +185,7 @@
     "\n",
     "To be able to read the data from Google Drive, we need to *mount* our Drive to this notebook.\n",
     "\n",
-    "As you can see in the cell below, make sure that in your **My Drive** folder, where you created **BigData** folder and within that folder, you have created a **Week5_Data** folder in which you can store the files that are required to run this analysis.\n",
+    "As you can see in the cell below, make sure that in your **My Drive** folder, where you created **BigData** folder and within that folder, you have created a **Week6_Data** folder in which you can store the files that are required to run this analysis.\n",
     "\n",
     "Please go the URL when its prompted in the box underneath the following cell, and copy the authorization code in that box."
    ]
@@ -203,6 +205,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### User Information\n",
+    "\n",
+    "Trough Twitter API we can make requests such as getting the information of a user, for example, we can show the followers of a user or list the user's latest post. \n",
+    "\n",
+    "The following line will open the previously retrieved information of the [IVM - VU](https://twitter.com/VU_IVM) account. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -215,10 +229,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can look at the data that you can extract for a given user using:"
+    "Have look at the information provided by Twitter for a specific user using:"
    ]
   },
   {
@@ -262,16 +277,6 @@
     "Now let's see the latest 5 tweets the IVM has posted.\n",
     "\n",
     "The user_timeline() method uses the user_id as a parameter, and we can indicate how many tweets we want using the count parameter."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# user_id = user.id_str\n",
-    "# Latest_tweets = api.user_timeline(user_id=user_id, count=5)"
    ]
   },
   {
@@ -392,7 +397,7 @@
     "\n",
     "Barack Obama ([@BarackObama](https://twitter.com/BarackObama)) has the Twitter account with the most followers according to [this website](https://www.tweetbinder.com/blog/top-twitter-accounts/). So let's explore the words he uses the most. \n",
     "\n",
-    "You can retrieve his last 200 tweets using the following lines:"
+    "We retrieved his last 200 tweets:"
    ]
   },
   {
@@ -419,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous section, we learned how to access get the text of each tweet by using ['text'] so let's go further first with only one tweet. \n",
+    "In the previous section, we learned how to access get the **text** of each tweet by using ['text'] so let's go further first with only one tweet. \n",
     "\n",
     "What type of data does it contain?"
    ]
@@ -645,7 +650,9 @@
    "source": [
     "We've learned how to retrieve the tweets of a specific user. \n",
     "Now it is time to retrieve them by using keywords that can be content in the text such as hashtags. \n",
-    "That will allow us to analyze what is happening at a specific time and/or location. "
+    "That will allow us to analyze what is happening at a specific time and/or location. \n",
+    "\n",
+    "The following data contains 100 filtered tweets that contain the word \"Earthquake\""
    ]
   },
   {
@@ -875,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open the previously retrieved dataset:"
+    "Open the previously retrieved dataset, it contains only the tweets with coordinates::"
    ]
   },
   {
@@ -927,10 +934,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's retrieve the last 100 posts made by @everyEarthquake:"
+    "Let's use the last 100 posts made by @everyEarthquake:"
    ]
   },
   {
@@ -1077,10 +1085,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can have a look at the map from the [USGS website](https://earthquake.usgs.gov/earthquakes/map/?extent=-68.0733,-194.23828&extent=77.15716,199.51172&listOnlyShown=true)."
+    "We can have a look at the map from the [USGS website](https://earthquake.usgs.gov/earthquakes/map/?extent=-68.0733,-194.23828&extent=77.15716,199.51172&listOnlyShown=true).* "
    ]
   },
   {
