small fixes week2

--- a/week2/tutorial2.ipynb
+++ b/week2/tutorial2.ipynb
@@ -82,20 +82,7 @@
     "\n",
     "[**NumPy**](https://numpy.org/doc/stable/) is a Python library that provides a multidimensional array object, various derived objects, and an assortment of routines for fast operations on arrays.\n",
     "\n",
-    "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language.\n",
-    "\n",
-    "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "lSR_vZFysrHP"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install seaborn"
+    "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language."
    ]
   },
   {
@@ -124,7 +111,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import random\n",
     "\n",
     "pd.options.mode.chained_assignment = None\n",
     "sns.set_style(\"whitegrid\",{'axes.grid' : True})"
@@ -162,8 +148,7 @@
    },
    "outputs": [],
    "source": [
-    "#data_in = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforweek2tut2.csv\")\n",
-    "data_in = pd.read_csv(\"usadataforweek2tut2_updatejan24.csv\")"
+    "data_in = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforweek2tut2.csv\")"
    ]
   },
   {
