--- a/week2/tutorial1.ipynb
+++ b/week2/tutorial1.ipynb
@@ -85,19 +85,7 @@
     "\n",
     "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language.\n",
     "\n",
-    "\n",
-    "*We will first need to install some of these packages in the cell below. Uncomment them to make sure we can pip install them*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "73gcgCJwkYkR"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install seaborn"
+    "[**statsmodels**](https://www.statsmodels.org/) is a Python module that provides classes and functions for the estimation of many different statistical models, as well as for conducting statistical tests, and statistical data exploration."
    ]
   },
   {
@@ -146,8 +134,7 @@
    "outputs": [],
    "source": [
     "## Read the data using the pandas package\n",
-    "#data = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforweek2tut1.csv\")\n",
-    "data = pd.read_csv(r\"usadataforweek2tut1_updatejan24.csv\")"
+    "data = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforweek2tut1.csv\")"
    ]
   },
   {
@@ -925,8 +912,7 @@
    },
    "outputs": [],
    "source": [
-    "#dataOLS = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS.csv\", sep = ',', encoding = 'unicode_escape')\n",
-    "dataOLS = pd.read_csv(r\"usadataforOLS_updatejan24.csv\", sep = ',', encoding = 'unicode_escape')"
+    "dataOLS = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS.csv\", sep = ',', encoding = 'unicode_escape')"
    ]
   },
   {
