small fixes week2

--- a/week3/tutorial1.ipynb
+++ b/week3/tutorial1.ipynb
@@ -97,10 +97,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install tensorflow\n",
     "!pip install keras-visualizer\n",
-    "!pip install pydot\n",
-    "!pip install graphviz"
+    "!pip install pydot"
    ]
   },
   {
@@ -154,8 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "#data1 = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS.csv\", sep = ',', encoding = 'unicode_escape')\n",
-    "data1 = pd.read_csv(r\"usadataforOLS_updatejan24.csv\", sep = ',', encoding = 'unicode_escape')"
+    "data1 = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS.csv\", sep = ',', encoding = 'unicode_escape')"
    ]
   },
   {
