--- a/week3/tutorial2.ipynb
+++ b/week3/tutorial2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial 4: Validation\n",
+    "# Tutorial 2: Validation\n",
     "\n",
     "You can also create content with Jupyter Notebooks. This means that you can include\n",
     "code blocks and their outputs in your book."
@@ -54,11 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Within this tutorial, we are going to make use of the following packages: \n",
-    "\n",
-    "\n",
-    "\n",
-    "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
+    "Within this tutorial, we are going to make use of the following packages: "
    ]
   },
   {
@@ -111,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = pd.read_csv(r\"usadataforOLS_updatejan24.csv\", sep = ',', encoding = 'unicode_escape')"
+    "data1 = pd.read_csv(r\"https://github.com/ElcoK/BigData_AED/raw/main/week2/usadataforOLS.csv\", sep = ',', encoding = 'unicode_escape')"
    ]
   },
   {
